vlib/v/checker/tests/function_arg_mutable_err.out
vlib/v/checker/tests/function_arg_mutable_err.vv:1:18: error: mutable arguments are only allowed for arrays, maps, structs and pointers
return values instead: `fn foo(mut n int) {` => `fn foo(n int) int {`
    1 | fn mod_ptr(mut a int) {
      |                  ~~~
    2 |     a = 77
    3 | }
