vlib/v/checker/tests/function_arg_mutable_err.vv
fn mod_ptr(mut a int) {
	a = 77
}

fn main() {
  println('hello')
}

